# contract_iq

./: README.md  app.py  new_pdf.py  pyproject.toml
app/: main.py
app/core/: config.py  logger.py
app/llm/: __init__.py  client.py
app/llm/prompts/: payment_v1.txt  renewal_v1.txt  termination_v1.txt
app/services/: __init__.py  chunk_service.py  pdf_service.py  review_service.py  structure_service.py
