[project]
name = "fastapi-template"
version = "0.1.0"
description = "Production-ready FastAPI template with SQLAlchemy, Alembic, and structured logging"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "fitz>=0.0.1.dev2",
    "fpdf>=1.7.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.4",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
